// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Checkbox matches screenshot 1`] = `
<DocumentFragment>
  <div
    class="c-gidqah decaCheckbox-root"
  >
    <input
      class="c-eCNcrt c-eCNcrt-fdUhn-color-primary c-eCNcrt-kueLmT-isDisabled-false decaCheckbox-input"
      id="1"
      type="checkbox"
      value=""
    />
    <label
      class="c-flUSLM c-flUSLM-eVJqzf-size-md c-flUSLM-hqEieG-isDisabled-false c-flUSLM-jQVVMl-cv"
      for="1"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m173.898 439.404-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
          fill="currentColor"
        />
      </svg>
      Label Text
    </label>
  </div>
</DocumentFragment>
`;

exports[`components/Checkbox renders all colors 1`] = `
<DocumentFragment>
  <div
    class="c-gidqah decaCheckbox-root"
  >
    <input
      class="c-eCNcrt c-eCNcrt-fdUhn-color-primary c-eCNcrt-kueLmT-isDisabled-false decaCheckbox-input"
      id="1"
      type="checkbox"
      value=""
    />
    <label
      class="c-flUSLM c-flUSLM-eVJqzf-size-md c-flUSLM-hqEieG-isDisabled-false"
      for="1"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m173.898 439.404-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
          fill="currentColor"
        />
      </svg>
    </label>
  </div>
  <div
    class="c-gidqah decaCheckbox-root"
  >
    <input
      class="c-eCNcrt c-eCNcrt-eqqmAr-color-secondary c-eCNcrt-kueLmT-isDisabled-false decaCheckbox-input"
      id="1"
      type="checkbox"
      value=""
    />
    <label
      class="c-flUSLM c-flUSLM-eVJqzf-size-md c-flUSLM-hqEieG-isDisabled-false"
      for="1"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m173.898 439.404-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
          fill="currentColor"
        />
      </svg>
    </label>
  </div>
  <div
    class="c-gidqah decaCheckbox-root"
  >
    <input
      class="c-eCNcrt c-eCNcrt-keGbpD-color-success c-eCNcrt-kueLmT-isDisabled-false decaCheckbox-input"
      id="1"
      type="checkbox"
      value=""
    />
    <label
      class="c-flUSLM c-flUSLM-eVJqzf-size-md c-flUSLM-hqEieG-isDisabled-false"
      for="1"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m173.898 439.404-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
          fill="currentColor"
        />
      </svg>
    </label>
  </div>
  <div
    class="c-gidqah decaCheckbox-root"
  >
    <input
      class="c-eCNcrt c-eCNcrt-hjDOGz-color-warning c-eCNcrt-kueLmT-isDisabled-false decaCheckbox-input"
      id="1"
      type="checkbox"
      value=""
    />
    <label
      class="c-flUSLM c-flUSLM-eVJqzf-size-md c-flUSLM-hqEieG-isDisabled-false"
      for="1"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m173.898 439.404-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
          fill="currentColor"
        />
      </svg>
    </label>
  </div>
  <div
    class="c-gidqah decaCheckbox-root"
  >
    <input
      class="c-eCNcrt c-eCNcrt-XCpOj-color-error c-eCNcrt-kueLmT-isDisabled-false decaCheckbox-input"
      id="1"
      type="checkbox"
      value=""
    />
    <label
      class="c-flUSLM c-flUSLM-eVJqzf-size-md c-flUSLM-hqEieG-isDisabled-false"
      for="1"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m173.898 439.404-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
          fill="currentColor"
        />
      </svg>
    </label>
  </div>
</DocumentFragment>
`;

exports[`components/Checkbox renders all sizes 1`] = `
<DocumentFragment>
  <div
    class="c-gidqah decaCheckbox-root"
  >
    <input
      class="c-eCNcrt c-eCNcrt-fdUhn-color-primary c-eCNcrt-kueLmT-isDisabled-false decaCheckbox-input"
      id="1"
      type="checkbox"
      value=""
    />
    <label
      class="c-flUSLM c-flUSLM-gPIcnu-size-sm c-flUSLM-hqEieG-isDisabled-false"
      for="1"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m173.898 439.404-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
          fill="currentColor"
        />
      </svg>
    </label>
  </div>
  <div
    class="c-gidqah decaCheckbox-root"
  >
    <input
      class="c-eCNcrt c-eCNcrt-fdUhn-color-primary c-eCNcrt-kueLmT-isDisabled-false decaCheckbox-input"
      id="1"
      type="checkbox"
      value=""
    />
    <label
      class="c-flUSLM c-flUSLM-eVJqzf-size-md c-flUSLM-hqEieG-isDisabled-false"
      for="1"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m173.898 439.404-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
          fill="currentColor"
        />
      </svg>
    </label>
  </div>
  <div
    class="c-gidqah decaCheckbox-root"
  >
    <input
      class="c-eCNcrt c-eCNcrt-fdUhn-color-primary c-eCNcrt-kueLmT-isDisabled-false decaCheckbox-input"
      id="1"
      type="checkbox"
      value=""
    />
    <label
      class="c-flUSLM c-flUSLM-komCFO-size-lg c-flUSLM-hqEieG-isDisabled-false"
      for="1"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m173.898 439.404-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
          fill="currentColor"
        />
      </svg>
    </label>
  </div>
</DocumentFragment>
`;
